--- a/assets/styles/stylesheet.css
+++ b/assets/styles/stylesheet.css
@@ -440,12 +440,22 @@ body {
 }
 .tile {
 	width: 100%;
-	/*border-radius: 5px;*/
-	/*overflow: hidden;*/
-}
-.tile > a {
 	display: block;
 	text-decoration: none;
+}
+.tile:hover {
+	border-style: solid;
+	border-width: 2px;
+	border-radius: 5px;
+	border-color: rgb(236,114,97);
+	background-color: rgb(236,114,97);
+}
+.tile:focus {
+	border-style: solid;
+	border-width: 2px;
+	border-radius: 5px;
+	border-color: rgb(236,114,97);
+	background-color: rgb(236,114,97);
 }
 .scrolling-tiled-list > .tile {
 	display: inline-block;  
@@ -453,12 +463,10 @@ body {
 	margin-right: 1em;
 	flex: 0 0 auto;
 }
-
-.thumbnail {
+.tile-image {
 	width: 100%;
 	border-radius: 5px;
 }
-
 .more-female {
 	display: none;
 }
@@ -471,7 +479,7 @@ body {
 	border-style: solid;
 	border-radius: 2em /*8px*/;
 	border-width: 1px;
-	border-color: #ec7261;
+	border-color: rgb(236,114,97);
 	background-color: rgb(21,32,43);
 	color: rgb(236,114,97);
 	font-weight: bold;
