--- a/assets/styles/stylesheet.css
+++ b/assets/styles/stylesheet.css
@@ -630,9 +630,16 @@ body {
 .section-heading /*<h2> heading*/{
 	width: 100%;
 	margin-bottom: 1em;
-	/*padding: 0 10px;	*/
-	font-size: 1.5rem;
-	/*font-weight: lighter;*/
+	font-size: 1.5rem;	
+}
+.section-subheading /*<h3> sesction sub heading */ {
+	display: block;
+	width: 100%;
+	margin-top: 1em;
+	padding-bottom: 1em;
+	font-size: 1.2rem;
+	font-weight: bold;	
+	color: rgba(136,153,165,0.9);
 }
 
 .tile-card-heading /*<h4> heading*/{
