update scrolling cards
implemented scrolling cards for more female characters and updated class names, IDs to match within scripts

--- a/assets/styles/stylesheet.css
+++ b/assets/styles/stylesheet.css
@@ -376,7 +376,7 @@ body {
 	font-weight: 700;
 	font-size: 1rem;
 }
-#scrolling_genre_cards {
+.scrolling-cards {
 	/*display: flex;*/
 	display: none;
 	flex-wrap: nowrap;
