--- a/assets/styles/stylesheet.css
+++ b/assets/styles/stylesheet.css
@@ -39,7 +39,7 @@ body {
 	============================================*/
 .modal-container {
 	background-color: rgb(0,0,0, 0.6);
-	display: flex;
+	display: none;
 	align-items: top;
 	justify-content: center; 
 	position: fixed;
@@ -79,7 +79,6 @@ body {
 	font-size: 1.2rem;
 	font-weight: 700;	
 }
-
 .discord-modal-item {
 	background-color: #23272a;
 	width: 100%;
@@ -88,7 +87,6 @@ body {
 	display: flex;
 	align-items: center;
 	border-radius: 10px;
-
 }
 .discord-modal-item-label {
 	display: block;
@@ -108,6 +106,7 @@ body {
 	color:#7289da;
 }
 .discord-modal-btn {
+	display: block;
 	align-self: stretch;
 	margin-left: auto;
 	width: 100px;
@@ -117,6 +116,7 @@ body {
 	border-style: none;
 	background-color: rgb(236,114,97);
 	border-width: 0;
+	text-decoration: none;
 	color: rgb(22,24,28);
 	font-weight: 700;
 	font-size: 1rem;
@@ -143,7 +143,9 @@ body {
 #discord_modal_btn_close:hover, #discord_modal_btn_close:focus {
 	cursor: pointer;
 	text-decoration: underline;	
-	background-color: #4a3848;
+	background-color:rgb(214,217,219);
+	color: rgb(22,24,28);
+
 }
 /*	============================================
 	Header
